fixed grid again & added correct spacing

--- a/src/components/subcomponents/feature/feature.desktop.scss
+++ b/src/components/subcomponents/feature/feature.desktop.scss
@@ -6,8 +6,8 @@
   .feature {
     display: grid;
     grid-template-columns: 3fr 4fr 1fr;
-    grid-template-rows: 2fr 3fr 3fr;
-    // height: 100%;
+    grid-template-rows: 2fr 1fr 3fr 1fr 3fr;
+    height: 100%;
   }
 
   .feature__number {
@@ -22,23 +22,24 @@
   .feature__summary {
     border: 1px solid black;
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
 
   .feature__image {
     border: 1px solid orange;
-    // height: 200px;
     height: 100%;
+    background-color: blue;
+    grid-column: 2 / 3;
+    grid-row: 2 / 5;
     // background-image: url('./feature.video.gif');
     // background-size: 100%;
     // background-position: center center;
     // background-repeat: no-repeat;
   }
 
-  
-
   .feature__next {
     border: 1px solid blue;
+    grid-row: 3 / 4;
   }
 
   .feature__navigation {
